--- a/config.ini
+++ b/config.ini
@@ -4,7 +4,8 @@
 		"port": 123,
 		"user": "wer",
 		"password": "password",
-		"dbname": "dbname"
+		"dbname": "dbname",
+		"ssl": false
 	},
 	"backup": {
 		"prefix": "autobackup",
